nginx/docs/ingress-example2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-weighted-ingress-1
  namespace: happy-end
  annotations:
    nginx.ingress.kubernetes.io/canary: "true" # Enable canary features
    nginx.ingress.kubernetes.io/canary-weight: "20" # Route 20% traffic to the canary service
spec:
  ingressClassName: nginx # Ensure you're using the NGINX Ingress Controller
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-v1 # This is the primary (stable) service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-weighted-ingress-2
  namespace: happy-end
spec:
  ingressClassName: nginx 
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-v2 # This is the canary service
                port:
                  number: 80
